--- a/package.json
+++ b/package.json
@@ -6,15 +6,44 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "dev:server": "nodemon server.js",
+    "dev:client": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "@testing-library/dom": "^9.3.0",
+    "@types/chart.js": "^2.9.41",
+    "@types/express": "^5.0.3",
+    "@types/node": "^20.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vitest/ui": "^1.0.0",
+    "chart.js": "^4.5.0",
+    "concurrently": "^8.2.0",
+    "eslint": "^8.45.0",
+    "happy-dom": "^12.0.0",
+    "jsdom": "^23.0.0",
+    "nodemon": "^3.0.1",
+    "typescript": "^5.0.0",
+    "vite": "^5.0.0",
+    "vitest": "^1.0.0"
   },
-  "keywords": ["uv-index", "weather", "express", "chart", "solar", "sentinel"],
+  "keywords": [
+    "uv-index",
+    "weather",
+    "express",
+    "chart",
+    "solar",
+    "sentinel"
+  ],
   "author": "",
   "license": "ISC"
 }
