--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,19 @@ services:
     build: .
     container_name: solar-sentinel
     ports:
-      - "9890:3000"
+      - '9890:3000'
     restart: unless-stopped
     environment:
       - NODE_ENV=production
       - PORT=3000
     healthcheck:
-      test: ["CMD", "node", "-e", "fetch('http://localhost:3000/api/uv-today').then(r => r.ok ? process.exit(0) : process.exit(1)).catch(() => process.exit(1))"]
+      test:
+        [
+          'CMD',
+          'node',
+          '-e',
+          "fetch('http://localhost:3000/api/uv-today').then(r => r.ok ? process.exit(0) : process.exit(1)).catch(() => process.exit(1))",
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
