--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "dependencies": {
     "express": "^4.18.2"
@@ -32,6 +34,7 @@
     "happy-dom": "^12.0.0",
     "jsdom": "^23.0.0",
     "nodemon": "^3.0.1",
+    "prettier": "^3.6.2",
     "typescript": "^5.0.0",
     "vite": "^5.0.0",
     "vitest": "^1.0.0"
