--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/chart.js": "^2.9.41",
     "@types/express": "^5.0.3",
     "@types/node": "^20.0.0",
+    "@types/supertest": "6.0.3",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitest/ui": "^1.0.0",
@@ -38,9 +39,12 @@
     "eslint": "^8.45.0",
     "happy-dom": "^12.0.0",
     "jsdom": "^23.0.0",
+    "nock": "14.0.10",
     "nodemon": "^3.0.1",
     "prettier": "^3.6.2",
+    "supertest": "7.1.4",
     "typescript": "^5.0.0",
+    "undici": "7.15.0",
     "vite": "^5.0.0",
     "vitest": "^1.0.0"
   },
