--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "nock": "14.0.10",
     "nodemon": "^3.0.1",
     "prettier": "^3.6.2",
+    "puppeteer": "24.18.0",
     "supertest": "7.1.4",
     "typescript": "^5.0.0",
     "undici": "7.15.0",
